<resources>
    <string name="app_name">FloatingTwitter</string>
    <string name="start">시작</string>
    <string name="stop">중지</string>
    <string name="setting">설정</string>
    <string name="oauth">OAuth</string>
    <string name="require_permission">해당 앱을 사용하기 위해선 오버레이 권한 동의가 필요합니다.</string>
    <string name="setting_oauth">OAuth 토큰 설정하기</string>
    <string name="oauth_set">토큰이 등록되었습니다.</string>
    <string name="oauth_not_set">토큰이 설정되어 있지 않습니다.</string>
    <string name="custom_image">커스텀 이미지 활성화</string>
    <string name="custom_image_setting">커스텀 이미지 활성화</string>
    <string name="custom_image_pick">이미지를 선택합니다.</string>
    <string name="custom_image_summary">활성화시 아이콘을 변경할 수 있습니다.</string>
    <string name="icon_size">아이콘 크기 조절</string>
    <string name="mention_color">멘션 알림 컬러 설정</string>
    <string name="mention_color_summary">멘션 알림을 표시할 색상을 정할 수 있습니다.</string>
    <string name="dm_color">DM 알림 컬러 설정</string>
    <string name="dm_color_summary">DM 알림을 표시할 색상을 정할 수 있습니다.</string>
    <string name="twin_color">둘다 왔을때 컬러설정</string>
    <string name="twin_color_summary">두가지 알림을 동시에 표시할 색상을 정할 수 있습니다.</string>
    <string name="save">저장하기</string>
    <string name="save_success">저장이 완료되었습니다.</string>

    <string name="invalid_intent">잘못된 인텐트 값입니다.</string>
    <string name="oauth_error">토큰 저장에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="setting_invalid">설정값이 저장되어 있지 않습니다. 저장해주세요.</string>
    <string name="invalid_both">oauth값과 설정값이 지정되어 있지 않습니다. 설정을 진행해주세요.</string>
    <string name="require_not_valid"></string>
</resources>